# vinexplainnet

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  data_sources.txt  environment.yml  pyproject.toml  requirements.txt
configs/data/: duke.conf  kermany.conf  octid.conf
configs/experiment/: _smoke.conf  ablation_local_only.conf  ablation_no_ass.conf  ablation_no_global.conf  ablation_no_hafm.conf  main.conf  supplementary_duke.conf  supplementary_octid.conf
configs/model/: vinexplainnet.conf
docs/: deviations.md  implementation-map.md  project-context.md  repo-plan.md
scripts/: launch_eval.sh  launch_train.sh  prepare_data.sh
tests/: conftest.py  test_config.py  test_cutting.py  test_house_style.py  test_lens.py  test_lighting.py  test_losses.py  test_model.py  test_screening.py  test_smoke.py  test_training.py
vinexplainnet/: feature.py
vinexplainnet/captions/: generator.py
vinexplainnet/casting/: augment.py  degrade.py  reels.py  sources.py  synthetic.py
vinexplainnet/crew/: logbook.py  reel_types.py  rig.py  seed.py  vault.py
vinexplainnet/cutting/: prune.py  quantize.py
vinexplainnet/direction/: clapper.py  runner.py  schedule.py  stages.py
vinexplainnet/framing/: heads.py
vinexplainnet/lens/: backbone.py  speckle.py
vinexplainnet/lighting/: fusion.py  streams.py
vinexplainnet/notes/: classification.py  explanation.py  objective.py  regularization.py
vinexplainnet/screening/: booth.py  clinical.py  faithfulness.py  footprint.py  metrics.py  robustness.py  significance.py  transfer.py
(+4 files in other folders)
